# tibia-game-orig

./: .clang-format  .clang-tidy  .cppcheck  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  Dockerfile  entrypoint.sh
build-test/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
build-test/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake  test_utils
src/: common.h  common.hh  communication.cc  communication.cpp  communication.h  config.cpp  config.h  connections.cc  connections.cpp  connections.h  containers.h  containers.hh  cr.h  cract.cc  cract.cpp  crcombat.cc  crcombat.cpp  crmain.cc  crmain.cpp  crnonpl.cc  crnonpl.cpp  crplayer.cc  crplayer.cpp  crskill.cc  crskill.cpp  crypto.cpp  crypto.h  enums.h  houses.cc  houses.cpp  houses.h  info.cc  info.cpp  info.h  magic.cc  magic.cpp  magic.h  main.cc  main.cpp  map.cc  (+37 more)
src/challenge/: challenge_ban.cpp  challenge_ban.h
src/common/assert/: assert.h
src/common/binary_file/: binary_file.cpp  binary_file.h
src/common/byte_order/: byte_order.h
src/common/containers/: containers.h
src/common/dynamic_buffer/: dynamic_buffer.cpp  dynamic_buffer.h
src/common/read_stream/: read_stream.cpp  read_stream.h
src/common/spsc_ring_buffer/: spsc_ring_buffer.h
src/common/strings/: strings.cpp  strings.h
src/common/types/: types.h
src/common/utils/: utils.cpp  utils.h
src/common/write_stream/: write_stream.cpp  write_stream.h
src/config/: config.cpp  config.h
src/creature/actions/: actions.cpp  actions.h
src/creature/combat/: combat.cpp  combat.h
src/creature/creature/: creature.cpp  creature.h
src/creature/creature_main/: creature_main.cpp  creature_main.h
src/creature/monster/: monster.cpp  monster.h
src/creature/nonplayer/: nonplayer.cpp  nonplayer.h
src/creature/npc/: npc.cpp  npc.h  npc_action.cpp  npc_action.h  npc_action_handlers.cpp
src/creature/player/: player.cpp  player.h
src/creature/race/: race.cpp  race.h
src/creature/skill/: skill.cpp  skill.h
src/crypto/rsa/: rsa.cpp  rsa.h
src/crypto/xtea/: xtea.cpp  xtea.h
src/enums/: enums.h
src/game_data/houses/: houses.cpp  houses.h
src/game_data/info/: info.cpp  info.h
src/game_data/magic/: magic.cpp  magic.h
src/game_data/map/: map.cpp  map.h
src/game_data/moveuse/: moveuse.cpp  moveuse.h
src/game_data/objects/: objects.cpp  objects.h
src/game_data/operate/: operate.cpp  operate.h
src/game_data/reader/: reader.cpp  reader.h
src/game_data/script/: script.cpp  script.h
src/game_data/writer/: writer.cpp  writer.h
src/logging/: logging.cpp  logging.h
src/main/: main.cpp  main.h
src/network/connection/: connection.cpp  connection.h
src/network/connection_pool/: connection_pool.cpp  connection_pool.h
src/network/transport/: transport.h
src/network/transport/tcp_transport/: tcp_transport.cpp  tcp_transport.h
src/network/transport/websocket_transport/: websocket_transport.cpp  websocket_transport.h
src/protocol/: protocol_enums.h
src/protocol/communication/: communication.cpp  communication.h
src/protocol/receiving/: receiving.cpp  receiving.h
src/protocol/sending/: sending.cpp  sending.h
src/protocol/websocket_acceptor/: websocket_acceptor.cpp  websocket_acceptor.h  websocket_types.h
src/query/query_client/: query_client.cpp  query_client.h
src/query/query_connection_pool/: query_connection_pool.cpp  query_connection_pool.h
src/query/query_types/: query_types.h
src/shm/: shm.cpp  shm.h
src/threads/: threads.cpp  threads.h
src/threads/semaphore/: semaphore.cpp  semaphore.h
src/time/: time_utils.h
tests/: CMakeLists.txt  doctest.h  test_binary_file.cpp  test_byte_order.cpp  test_char_combat.cpp  test_char_connection.cpp  test_char_houses.cpp  test_char_magic.cpp  test_char_map.cpp  test_char_monster.cpp  test_char_moveuse.cpp  test_char_npc.cpp  test_char_objects.cpp  test_char_operate.cpp  test_char_player.cpp  test_char_race.cpp  test_char_script.cpp  test_char_skill.cpp  test_config.cpp  test_containers.cpp  test_dynamic_buffer.cpp  test_logging.cpp  test_npc_action.cpp  test_read_stream.cpp  test_semaphore.cpp  test_spsc_ring_buffer.cpp  test_strings.cpp  test_tcp_transport.cpp  test_utils.cpp  test_websocket_transport.cpp  test_write_stream.cpp  test_xtea.cpp
